--- a/graphic.kv
+++ b/graphic.kv
@@ -21,7 +21,7 @@
                 orientation: 'horizontal'
                 size_hint: 1, .18
                 Label:
-                    text: root.main_app_name_label
+                    text: '[b]{}[/b]'.format(root.main_app_name_label)
                     markup: 'True'
                     font_size: self.parent.width/20
                 Label:
@@ -47,44 +47,43 @@
                     Label:
                         size_hint: 1, 0.2
                     Label:
-                        text: str(root.barcode_label[0])
+                        text: root.barcode_label_1
                         color: 0, 0, 0, 1
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[1])
+                        text: root.barcode_label_2
                         color: 0, 0, 0, 0.95
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[2])
+                        text: root.barcode_label_3
                         color: 0, 0, 0, 0.9
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[3])
+                        text: root.barcode_label_4
                         color: 0, 0, 0, 0.85
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[4])
+                        text: root.barcode_label_5
                         color: 0, 0, 0, 0.8
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[5])
+                        text: root.barcode_label_6
                         color: 0, 0, 0, 0.75
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[6])
+                        text: root.barcode_label_7
                         color: 0, 0, 0, 0.7
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[7])
+                        text: root.barcode_label_8
                         color: 0, 0, 0, 0.65
                         font_size: self.parent.width/19
                     Label:
-                        id: str(root.barcode_label[8])
-                        text: ''
+                        text: root.barcode_label_9
                         color: 0, 0, 0, 0.6
                         font_size: self.parent.width/19
                     Label:
-                        text: str(root.barcode_label[9])
+                        text: root.barcode_label_10
                         color: 0, 0, 0, 0.55
                         font_size: self.parent.width/19
                     Label:
@@ -144,7 +143,7 @@
                                     background_color: 0, .6156, .48235
                                     background_color: 0, .6156, .48235, 1
                                     background_normal: ''
-                                    on_press:
+                                    on_press: root.add_comment()
                                 Label:
                                     size_hint: .1 , 1
                                 Button:
@@ -166,7 +165,7 @@
                                     valign: 'middle'
                                     background_color: 0, .6156, .48235, 1
                                     background_normal: ''
-                                    on_press:
+                                    on_press: root.exit_app()
                                 Label:
                                     size_hint: .05 , 1
                     Label:
@@ -175,6 +174,7 @@
                         size_hint: 1, 0.3
                     TextInput:
                         id: comment
+                        text: root.comment_box
                         size_hint: 1 , 0.6
                     Label:
                         size_hint: 1, 0.3
