--- a/graphic.kv
+++ b/graphic.kv
@@ -154,7 +154,7 @@
                                     valign: 'middle'
                                     background_color: 0, .6156, .48235, 1
                                     background_normal: ''
-                                    on_press:
+                                    on_press: root.add_second_category()
                                 Label:
                                     size_hint: .1 , 1
                                 Button:
